2001-10-03  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in: Override new values found from logindefs
	and not in profiles. Removed xst_progress remains.
	Added reporting. Backups all files it (remotely) touches.

2001-10-02  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (list_ifaces): directive that lists
	instantaneous info about all interfaces (ifconfig -a).

	* network.pl.in (xst_network_interfaces_get_info): Collect
	more info: active and dev, and include inactive interfaces.

2001-10-02  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Use full paths to XFree86, don't try to depend on links.
	(x_update_list_string): Emptry string is valid string! doh!
	(x_add_unique_string): Ditto.

	* users-conf.in: Rewrote profiles and login.defs stuff.
	Removed/exchanged all old cruft so now it seems more like
	other 'up-to-date' backends.

	* xml.pl.in (xst_xml_format_pcdata): Don't use if ($name) conditions
	if 0 or empty string are valid values. Use if (defined ($name))
	instead.
	(xst_xml_print_comment): Implement.

2001-10-01  Arturo Espinosa Aldama  <arturo@ximian.com>

	* display-conf.in: Added mandrake-7.2 to the list of supported
	platforms.

	* network.pl.in (xst_network_rh62_parse_bootproto): typo caused
	bootproto to always be "none".

2001-09-28  Tambet Ingo  <tambet@ximian.com>

	* font.pl.in: Implemented addition and removal of TrueType and
	Type1 fonts for X. Currently works only with RH and derivates.

	(xfs_parse): Implementet xfs parser.

	* file.pl.in (xst_file_create_path): Added new parameter with nice
	default to set permissions.
	(xst_file_create_path_for_file): Ditto.

2001-09-27  Tambet Ingo  <tambet@ximian.com>

	* util.pl.in (xst_process_result_collect): Handle errors a bit better.

	* x.pl.in (x_probe_scan): Oops! I had two functions with same name
	and perl didin't even warn me about it! Removed one.

2001-09-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_rh_get_smb_desc): This removes